--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+jupyterlab = "^4.3.4"
+ipywidgets = "^8.1.5"
+nbformat = "^5.10.4"
 
 
 [build-system]
