--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,13 @@ python = "^3.12"
 jupyterlab = "^4.3.4"
 ipywidgets = "^8.1.5"
 nbformat = "^5.10.4"
+simpleitk = "^2.4.0"
+matplotlib = "^3.10.0"
+numpy = "^2.2.1"
+arrow = "^1.3.0"
+tqdm = "^4.67.1"
+opencv-python = "^4.10.0.84"
+scikit-image = "^0.25.0"
 
 
 [build-system]
