--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ arrow = "^1.3.0"
 tqdm = "^4.67.1"
 opencv-python = "^4.10.0.84"
 scikit-image = "^0.25.0"
+notebook = "^7.3.2"
+pandas = "^2.2.3"
 
 
 [build-system]
