--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ opencv-python = "^4.10.0.84"
 scikit-image = "^0.25.0"
 notebook = "^7.3.2"
 pandas = "^2.2.3"
+pynrrd = "^1.1.3"
+nibabel = "^5.3.2"
 
 
 [build-system]
