--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ notebook = "^7.3.2"
 pandas = "^2.2.3"
 pynrrd = "^1.1.3"
 nibabel = "^5.3.2"
+seaborn = "^0.13.2"
+statsmodels = "^0.14.4"
 
 
 [build-system]
