--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,12 +17,15 @@ arrow = "^1.3.0"
 tqdm = "^4.67.1"
 opencv-python = "^4.10.0.84"
 scikit-image = "^0.25.0"
-notebook = "^7.3.2"
 pandas = "^2.2.3"
 pynrrd = "^1.1.3"
 nibabel = "^5.3.2"
 seaborn = "^0.13.2"
 statsmodels = "^0.14.4"
+albumentations = "^2.0.4"
+segmentation-models-pytorch = "^0.4.0"
+ipython = "^9.0.0"
+notebook = "^7.3.2"
 
 
 [build-system]
