add: sklearn, lightning, update: albumentation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ albumentations = "^2.0.4"
 segmentation-models-pytorch = "^0.4.0"
 ipython = "^9.0.0"
 notebook = "^7.3.2"
+scikit-learn = "^1.6.1"
+lightning = "^2.5.0.post0"
 
 
 [build-system]
