--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ ipython = "^9.0.0"
 notebook = "^7.3.2"
 scikit-learn = "^1.6.1"
 lightning = "^2.5.0.post0"
+tensorboard = "^2.19.0"
 
 
 [build-system]
