--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ frames
 outputs
 evaluation/results
 lightning_logs
+3d/ct_fm_outputs
+evaluations/*.csv
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
